Murphy System/archive/artifacts/outputs/workspace_output_1769204791_2342.txt
/workspace/main_script.js:739
        }
        ^

SyntaxError: missing ) after argument list
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v20.19.6
